@@ -57,15 +57,14 @@ module lithot
 
 contains  
   !> initialise geothermal heat flux computations
-  subroutine init_lithot(model,litho)
-    use glide_types
-    use glide_setup
+  subroutine init_lithot(litho,dt,hotstart)
     use glimmer_paramets, only: tim0
     use glimmer_log
     use lithot1d
     implicit none
-    type(glide_global_type),intent(inout) :: model       !*FD model instance
     type(lithot_type) :: litho            !< structure holding bedrock temperature configuration    
+    real(dp), intent(in) :: dt !< current time step
+    logical, intent(in) :: hotstart !< set to .True. if model is hotstarted
 
     ! local variables
     integer k
@@ -77,7 +76,7 @@ contains
 
     ! set up vertical grid
     do k=1,litho%nlayer
-       litho%deltaz(k) = (1-glide_calc_sigma(real(litho%nlayer-k)/real(litho%nlayer-1),2.)) &
+       litho%deltaz(k) = (1-calc_sigma(real(litho%nlayer-k)/real(litho%nlayer-1),2.)) &
             *litho%rock_base
     end do
 
@@ -86,18 +85,18 @@ contains
 
     ! set up factors for vertical finite differences
     do k=2,litho%nlayer-1
-       litho%zfactors(1,k) =  litho%diffu*tim0*model%numerics%dt / &
+       litho%zfactors(1,k) =  litho%diffu*tim0*dt / &
             ((litho%deltaz(k)-litho%deltaz(k-1)) * (litho%deltaz(k+1)-litho%deltaz(k-1)))
-       litho%zfactors(2,k) = litho%diffu*tim0*model%numerics%dt / &
+       litho%zfactors(2,k) = litho%diffu*tim0*dt / &
             ((litho%deltaz(k+1)-litho%deltaz(k)) * (litho%deltaz(k)-litho%deltaz(k-1)))
-       litho%zfactors(3,k) = litho%diffu*tim0*model%numerics%dt / &
+       litho%zfactors(3,k) = litho%diffu*tim0*dt / &
             ((litho%deltaz(k+1)-litho%deltaz(k)) * (litho%deltaz(k+1)-litho%deltaz(k-1)))
     end do
     k = litho%nlayer
-    litho%zfactors(:,k) = 0.5*litho%diffu*tim0*model%numerics%dt / &
+    litho%zfactors(:,k) = 0.5*litho%diffu*tim0*dt / &
          (litho%deltaz(k)-litho%deltaz(k-1))**2
 
-    if (model%options%hotstart.ne.1) then
+    if (.not.hotstart) then
        ! set initial temp distribution to thermal gradient
        factor = litho%geot/litho%con_r
        do k=1,litho%nlayer
@@ -106,73 +105,84 @@ contains
     end if
 
 
-    if (model%lithot%num_dim.eq.1) then
+    if (litho%num_dim.eq.1) then
        call init_lithot1d(litho)
     else
        call write_log('Wrong number of dimensions.',GM_FATAL,__FILE__,__LINE__)
     end if
+
+    contains
+      function calc_sigma(x,n)
+        implicit none
+        real :: calc_sigma,x,n
+        
+        calc_sigma = (1-(x+1)**(-n))/(1-2**(-n))
+      end function calc_sigma
+
   end subroutine init_lithot    
 
   !> spinup geothermal heat flux computations
-  subroutine spinup_lithot(model,litho)
+  subroutine spinup_lithot(litho,hotstart,thkmask,base_temp,air_temp,bheatflx)
     use glide_types
     use glimmer_log
     use glimmer_mask
     implicit none
-    type(glide_global_type),intent(inout) :: model       !*FD model instance
     type(lithot_type) :: litho            !< structure holding bedrock temperature configuration    
-
+    logical, intent(in) :: hotstart !< set to .True. if model is hotstarted
+    integer, dimension(:,:), intent(in) :: thkmask !< surface type mask
+    real(dp), dimension(:,:), intent(in) :: base_temp !< temperature at ice base
+    real(sp), dimension(:,:), intent(in) :: air_temp  !< air temperature    
+    real(dp),dimension(:,:), intent(out) :: bheatflx !< field holding basal heat flux
     integer t
 
-    if (model%options%hotstart.ne.1 .and. litho%numt .gt. 0) then
+    if (.not.hotstart .and. litho%numt .gt. 0) then
        call write_log('Spinning up GTHF calculations',type=GM_INFO)
 
        do t=1,litho%numt
-          call calc_lithot(model,litho)
+          call calc_lithot(litho,thkmask,base_temp,air_temp,bheatflx)
        end do
 
     end if
   end subroutine spinup_lithot
 
   !> compute temperature in the lithosphere
-  subroutine calc_lithot(model,litho)
-    use glide_types
+  subroutine calc_lithot(litho,thkmask,base_temp,air_temp,bheatflx)
     use glimmer_log
     use lithot1d
     implicit none
-    type(glide_global_type),intent(inout) :: model       !*FD model instance
     type(lithot_type) :: litho            !< structure holding bedrock temperature configuration    
+    integer, dimension(:,:), intent(in) :: thkmask !< surface type mask
+    real(dp), dimension(:,:), intent(in) :: base_temp !< temperature at ice base
+    real(sp), dimension(:,:), intent(in) :: air_temp  !< air temperature    
+    real(dp),dimension(:,:), intent(out) :: bheatflx !< field holding basal heat flux
 
     if (litho%num_dim.eq.1) then
-       call calc_lithot1d(model,litho)
+       call calc_lithot1d(litho,thkmask,base_temp,air_temp)
     else
        call write_log('Wrong number of dimensions.',GM_FATAL,__FILE__,__LINE__)
     end if
       
-    call calc_geoth(model,litho)
+    call calc_geoth(litho,bheatflx)
 
   end subroutine calc_lithot
 
   !> calculate geothermal heat flux
-  subroutine calc_geoth(model,litho)
-    use glide_types
+  subroutine calc_geoth(litho,bheatflx)
     implicit none
-    type(glide_global_type),intent(inout) :: model       !*FD model instance
     type(lithot_type) :: litho            !< structure holding bedrock temperature configuration    
+    real(dp),dimension(:,:), intent(out) :: bheatflx !< field holding basal heat flux
 
     real(dp) factor
 
     factor = litho%con_r/(litho%deltaz(2)-litho%deltaz(1))
-    model%temper%bheatflx(:,:) = factor*(litho%temp(:,:,2)-litho%temp(:,:,1))
+    bheatflx(:,:) = factor*(litho%temp(:,:,2)-litho%temp(:,:,1))
   end subroutine calc_geoth
 
   !> clean up lithot module
-  subroutine finalise_lithot(model,litho)
-    use glide_types
+  subroutine finalise_lithot(litho)
     use lithot1d
     use glimmer_log
     implicit none
-    type(glide_global_type),intent(inout) :: model       !*FD model instance
     type(lithot_type) :: litho            !< structure holding bedrock temperature configuration    
 
     deallocate(litho%deltaz)
