@@ -1,3 +1,11 @@
+2010-01-20 Magnus Hagdorn
+ * libglide/lithot.F90: remove glide_global_type from argument list and replace
+   with individual fields
+ * libglide/lithot1d.F90: ditto
+ * example-drivers/eis/src/eis_glide.F90: adjust API
+ * libglide/glide.F90: ditto
+ * tests/EISMINT/src/simple_glide.F90: ditto
+
 2010-01-19 Magnus Hagdorn
  * libglide/Makefile.am: add flag to find glimmer_memory.inc
  * libglide/glide_temp.F90: convert doc to doxygen
